fix: broken layout on small devices

--- a/css/style.css
+++ b/css/style.css
@@ -20,10 +20,13 @@ h1 {
   color: #fff;
   font-size: 40px;
   margin-bottom: 20px;
+  text-align: center;
 }
 
 ul {
   list-style: none;
+  width: 100%;
+  max-width: 400px;
 }
 
 a {
@@ -32,7 +35,8 @@ a {
   padding: 15px;
   color: #fff;
   font-size: 20px;
-  width: 400px;
+  width: 100%;
+  max-width: 400px;
   text-align: center;
   text-decoration: none;
   border-radius: 5px;
